@@ -23,8 +23,23 @@ class Sources(BrowserBase):
         if media_type == 'movie':
             return self.get_movie_sources(query, mal_id)
 
-        episode_sources = self.get_episode_sources(query, mal_id, episode, status)
-        show_sources = self.get_show_sources(query, mal_id, episode)
+        if 'part' in query.lower() or 'cour' in query.lower():
+            part_match = re.search(r'(?:part|cour) ?(\d+)', query.lower())
+            if part_match:
+                part = int(part_match.group(1).strip())
+            else:
+                part = None
+        else:
+            part = None
+
+        # If the part could not be determined from the query, try to get it from the MAL mappings.
+        if part is None:
+            mal_mapping = database.get_mappings(mal_id, 'mal_id')
+            if mal_mapping and 'thetvdb_part' in mal_mapping:
+                part = mal_mapping['thetvdb_part']
+
+        episode_sources = self.get_episode_sources(query, mal_id, episode, part, status)
+        show_sources = self.get_show_sources(query, mal_id, episode, part)
         self.sources = episode_sources + show_sources
 
         if not self.sources and ':' in query:
@@ -32,23 +47,14 @@ class Sources(BrowserBase):
             q1 = q1[1:-1].split(':')[0]
             q2 = q2[1:-1].split(':')[0]
             query2 = '({0})|({1})'.format(q1, q2)
-            self.sources = self.get_episode_sources(query2, mal_id, episode, status)
+            self.sources = self.get_episode_sources(query2, mal_id, episode, part, status)
 
         # remove any duplicate sources
         self.append_cache_uncached_noduplicates()
         return {'cached': self.cached, 'uncached': self.uncached}
 
-    def get_episode_sources(self, show, mal_id, episode, status):
+    def get_episode_sources(self, show, mal_id, episode, part, status):
         nyaa_sources = []
-
-        if 'part' in show.lower() or 'cour' in show.lower():
-            part_match = re.search(r'(?:part|cour) ?(\d+)', show.lower())
-            if part_match:
-                part = int(part_match.group(1).strip())
-            else:
-                part = None
-        else:
-            part = None
 
         season = database.get_episode(mal_id)['season']
         season_zfill = str(season).zfill(2)
@@ -116,16 +122,7 @@ class Sources(BrowserBase):
         nyaa_sources += self.process_nyaa_episodes(self._BASE_URL, params, episode_zfill, season_zfill, part)
         return nyaa_sources
 
-    def get_show_sources(self, show, mal_id, episode):
-        if 'part' in show.lower() or 'cour' in show.lower():
-            part_match = re.search(r'(?:part|cour) ?(\d+)', show.lower())
-            if part_match:
-                part = int(part_match.group(1).strip())
-            else:
-                part = None
-        else:
-            part = None
-
+    def get_show_sources(self, show, mal_id, episode, part):
         season = database.get_episode(mal_id)['season']
         season_zfill = str(season).zfill(2)
         episode_zfill = episode.zfill(2)
